# src/dto/home/HomeDTO.ts
@@ -1,0 +1,8 @@
+import { GuideDTO }  from "../guide/GuideDTO";
+import { RecipeDTO } from "../recipe/RecipeDTO";
+
+export default interface HomeDTO {
+  laterRecipeList: RecipeDTO[],
+  guideList: GuideDTO[],
+  nickname: string;
+}
